More spacing fixes for Filter section

--- a/component/app/styles/sections/_community.scss
+++ b/component/app/styles/sections/_community.scss
@@ -7,7 +7,7 @@ Community Projects Page
 }
 
 .community-container {
-    margin: 1% 3%;
+    margin: 0% 3%;
 }
 
 .community-download {
@@ -18,8 +18,8 @@ Community Projects Page
     float: right;
 }
 
-#community-statistics, #community-query {
-    margin-bottom: 3%;
+#community-statistics {
+    margin: 2% 0% 1% 0%;
 }
 
 .no-display {
@@ -58,7 +58,6 @@ Community Query
     //display: none;
     padding: 2%;
     border: 0.25px solid $vdj-medgray;
-    margin-bottom: 3%;
 
     form {
         margin-bottom: 0%;
@@ -87,7 +86,7 @@ Community Query
 /* ----------------------------------------------------------
 Community Statistics
 ------------------------------------------------------------*/
-#community-statistics {
+#community-query-stats {
     background: #FFFFFF;
     position: sticky;
     position: -webkit-sticky;
@@ -96,34 +95,23 @@ Community Statistics
     padding: 2%;
 }
 
-.community-statistics {
-    width: 200%;
-}
-
-.stats-border {
+.query-stats-border {
     -webkit-box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.08);
     -moz-box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.08);
     box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.08);
-    border-bottom: 1px solid $vdj-lightgray;
+    border-bottom: 1px solid $vdj-medgray;
 }
 
-.results-filters {
-    width: 500px;
-    margin-right: 3%;
+.results-stats {
+    text-align: center;
 }
 
-@include media-breakpoint-down(lg) {
-    .results-filters {
-        width: 325px;
-    }
-}
-
-.filters {
+.stats {
     margin-right: 1%;
     display: inline;
 }
 
-.filter-badges {
+.stats-badges {
     display: inline;
 }
 
@@ -140,22 +128,9 @@ a.remove-filter {
 // a.remove-filter:hover {
 //     color: #FFFFFF;
 // }
-
-// .dropdown-toggle-times::after {
-//   border: none;
-//   font-family: 'Font Awesome 5 Free';
-//   font-weight: 400;
-//   content: "\f00d";
-//   vertical-align: 0;
-// }
-
 .btn-download {
     float: right;
 }
-
-//.dropdown-toggle-times::before {
-//  display: none;
-//}
 
 /* ----------------------------------------------------------
 Community Charts
